# cosmic-unified-sim

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all_simulations.py
.github/workflows/: ci.yml  publish.yml  wiki.yml
coverage/: class_index.html  function_index.html  index.html  status.json  z_1925a69404ad81a6___init___py.html  z_1925a69404ad81a6_body_py.html  z_1925a69404ad81a6_calculator_py.html  z_1925a69404ad81a6_integrators_py.html  z_1925a69404ad81a6_nbody_py.html  z_1925a69404ad81a6_presets_py.html  z_54b14d3fd84b1455___init___py.html  z_54b14d3fd84b1455_analysis_py.html  z_54b14d3fd84b1455_report_py.html  z_58b121c0d066034d___init___py.html  z_58b121c0d066034d_models_py.html  z_58b121c0d066034d_simulator_py.html  z_5c2144dcfa8de4f8___init___py.html  z_5c2144dcfa8de4f8_main_py.html  z_5f52120bf449f51b___init___py.html  z_5f52120bf449f51b_emergence_py.html  z_5f52120bf449f51b_fabric_py.html  z_5f52120bf449f51b_observer_py.html  z_5f52120bf449f51b_operators_py.html  z_803442985e006ebd___init___py.html  z_803442985e006ebd_base_py.html  z_803442985e006ebd_checkpoint_py.html  z_803442985e006ebd_config_py.html  z_803442985e006ebd_exceptions_py.html  z_803442985e006ebd_gpu_py.html  z_803442985e006ebd_io_py.html  z_803442985e006ebd_logging_py.html  z_803442985e006ebd_progress_py.html  z_850bfcda67e16c9a___init___py.html  z_850bfcda67e16c9a_plots_py.html  z_b622755370c2a46d___init___py.html  z_c74ab4d7f3f33ca6___init___py.html  z_c74ab4d7f3f33ca6_cosmological_py.html  z_c74ab4d7f3f33ca6_fundamental_py.html  z_cd25444fbaaaab65___init___py.html  z_cd25444fbaaaab65_leptogenesis_py.html  (+3 more)
docs/: Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/api/: coherence.rst  core.rst  cosmic.rst  genesis.rst  holographic.rst  quantum.rst
docs/tutorials/: coherence_evolution.rst  custom_integrators.rst  extending_framework.rst  gpu_acceleration.rst  index.rst  multiverse_analysis.rst  nbody_simulation.rst  performance_optimization.rst  quantum_basics.rst  visualization_guide.rst
examples/: 01_quantum_basics.ipynb  02_nbody_simulation.ipynb  03_coherence_evolution.ipynb  04_matter_genesis.ipynb  05_holographic_analysis.ipynb  06_advanced_quantum.ipynb  07_solar_system.ipynb  08_leptogenesis_deep_dive.ipynb  09_unified_universe.ipynb  quick_start.py
sim/: __init__.py
sim/cli/: __init__.py  main.py
sim/coherence/: __init__.py  models.py  simulator.py
sim/constants/: __init__.py  cosmological.py  fundamental.py
sim/core/: __init__.py  base.py  checkpoint.py  config.py  exceptions.py  gpu.py  io.py  logging.py  progress.py
sim/cosmic/: __init__.py  body.py  calculator.py  integrators.py  nbody.py  presets.py
sim/genesis/: __init__.py  leptogenesis.py  quantum_creation.py  resonance.py  simulation.py
sim/holographic/: __init__.py  analysis.py  report.py
sim/quantum/: __init__.py  emergence.py  fabric.py  observer.py  operators.py
sim/visualization/: __init__.py  plots.py
simulation-results/: README.md  analysis_report.md  simulation_results.json
tests/: __init__.py  test_basic.py  test_core.py  test_cosmic.py  test_quantum.py
