[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmic-unified-sim"
version = "0.1.0"
description = "Unified cosmological simulation framework: quantum mechanics, N-body dynamics, coherence evolution, matter genesis, and holographic analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Timur Isanov", email = "tisanov@yahoo.com"}
]
keywords = [
    "cosmology", "simulation", "quantum", "n-body", "physics",
    "coherence", "holographic", "matter-genesis", "universe"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
gpu-cuda = ["cupy-cuda12x"]
gpu-vulkan = ["vulkpy"]
gpu-opencl = ["pyopencl"]
gpu-all = ["cupy-cuda12x", "vulkpy", "pyopencl"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autobuild>=2021.3.14",
]
jupyter = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]
yaml = [
    "pyyaml>=6.0.0",
]
all = [
    "cosmic-unified-sim[gpu-cuda,dev,docs,jupyter,yaml]",
]

[project.scripts]
sim = "sim.cli.main:main"

[project.urls]
Homepage = "https://github.com/xtimon/unified-sim"
Documentation = "https://github.com/xtimon/unified-sim#readme"
Repository = "https://github.com/xtimon/unified-sim.git"
Issues = "https://github.com/xtimon/unified-sim/issues"
Changelog = "https://github.com/xtimon/unified-sim/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["sim"]
skip = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests",
    "docs",
    "build",
]

[tool.coverage.run]
source = ["sim"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]  # assert_used
